# nox

./: .editorconfig  .gitignore  BUILD  CMakeLists.txt  DEVELOPMENT.md  Module.bazel  README.md  renovate.json
.github/workflows/: ci.yaml
scripts/: build.sh  test.sh
src/: lexer.cpp  lexer.h  lexer_test.cpp
tests/: lexer.cpp
